[gd_scene load_steps=27 format=3 uid="uid://dtcyv2sxhklx3"]

[ext_resource type="Theme" uid="uid://ddk547gkpyr0u" path="res://theme.tres" id="1_b6tx8"]
[ext_resource type="Script" path="res://menus/menu.gd" id="1_md87q"]
[ext_resource type="Script" path="res://menus/calendar_month_label.gd" id="2_6flc8"]
[ext_resource type="Script" path="res://menus/animation_player.gd" id="2_8nkf3"]
[ext_resource type="Script" path="res://menus/calendar_year_label.gd" id="3_t8vuf"]
[ext_resource type="Script" path="res://menus/earning_label.gd" id="4_xdwcb"]
[ext_resource type="Script" path="res://menus/salary_label.gd" id="5_qhs55"]
[ext_resource type="Script" path="res://menus/event_list.gd" id="6_nkdjw"]
[ext_resource type="Script" path="res://menus/progress_bar.gd" id="7_ks7f6"]
[ext_resource type="Script" path="res://menus/calendar_day_label.gd" id="8_2g70j"]
[ext_resource type="Script" path="res://menus/find_job/find_job_button.gd" id="10_iirfd"]
[ext_resource type="PackedScene" uid="uid://c7fp32demm52g" path="res://menus/find_job/find_job.tscn" id="11_uviox"]
[ext_resource type="PackedScene" uid="uid://bxqro37ri431x" path="res://menus/panels/career_panel.tscn" id="13_f3rn0"]
[ext_resource type="Script" path="res://menus/panels/career_panel.gd" id="14_1k23j"]

[sub_resource type="Animation" id="Animation_w2anp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Control/EarningLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Control/EarningLabel:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ohk72"]
resource_name = "animate_balance"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Control/EarningLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, -10), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_q5xb6"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Control/EarningLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, -10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Control/EarningLabel:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.286275, 0.403922, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ud87y"]
resource_name = "animate_salary"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, -10), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_25ghi"]
resource_name = "new_animation"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b1gwl"]
_data = {
"RESET": SubResource("Animation_w2anp"),
"animate_balance": SubResource("Animation_ohk72"),
"animate_balance_deducted": SubResource("Animation_q5xb6"),
"animate_salary": SubResource("Animation_ud87y"),
"new_animation": SubResource("Animation_25ghi")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ennqc"]

[sub_resource type="Theme" id="Theme_16vng"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_28e2y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ho4pj"]
bg_color = Color(0.643137, 0.372549, 0.803922, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wg1q2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4mt8n"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_b6tx8")
script = ExtResource("1_md87q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../PrimeContainer/MainControl/VBoxContainer/Control2/SalaryLabel")
libraries = {
"": SubResource("AnimationLibrary_b1gwl")
}
script = ExtResource("2_8nkf3")

[node name="PrimeContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainControl" type="MarginContainer" parent="PrimeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PrimeContainer/MainControl"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="HBoxContainer" type="HBoxContainer" parent="PrimeContainer/MainControl/VBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 4

[node name="CalendarMonthLabel" type="Label" parent="PrimeContainer/MainControl/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_b6tx8")
text = "Month 01"
vertical_alignment = 1
script = ExtResource("2_6flc8")

[node name="CalendarYearLabel" type="Label" parent="PrimeContainer/MainControl/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Year 1"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("3_t8vuf")

[node name="HSeparator4" type="HSeparator" parent="PrimeContainer/MainControl/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 10)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ennqc")

[node name="PanelContainer" type="PanelContainer" parent="PrimeContainer/MainControl/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="PrimeContainer/MainControl/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = SubResource("Theme_16vng")
value = 1.0
show_percentage = false
script = ExtResource("7_ks7f6")

[node name="CalendarDayLabel" type="Label" parent="PrimeContainer/MainControl/VBoxContainer/PanelContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.5
offset_right = 21.5
grow_horizontal = 2
grow_vertical = 2
text = "Day 1"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_2g70j")

[node name="HSeparator" type="HSeparator" parent="PrimeContainer/MainControl/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ennqc")

[node name="Control" type="Control" parent="PrimeContainer/MainControl/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2

[node name="EarningLabel" type="Label" parent="PrimeContainer/MainControl/VBoxContainer/Control"]
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Balance: RM 0"
vertical_alignment = 1
script = ExtResource("4_xdwcb")

[node name="Control2" type="Control" parent="PrimeContainer/MainControl/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2

[node name="SalaryLabel" type="Label" parent="PrimeContainer/MainControl/VBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.352941, 0.992157, 0, 1)
text = "Salary: RM 0"
vertical_alignment = 1
script = ExtResource("5_qhs55")

[node name="HSeparator2" type="HSeparator" parent="PrimeContainer/MainControl/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_28e2y")

[node name="ButtonControl" type="Control" parent="PrimeContainer/MainControl/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 60)
layout_mode = 2

[node name="Button" type="Button" parent="PrimeContainer/MainControl/VBoxContainer/ButtonControl"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
offset_top = 4.0
offset_right = 438.0
offset_bottom = 54.0
theme = ExtResource("1_b6tx8")
theme_type_variation = &"FlatButton"
theme_override_styles/normal = SubResource("StyleBoxFlat_ho4pj")
text = "Find Job"
script = ExtResource("10_iirfd")

[node name="HSeparator3" type="HSeparator" parent="PrimeContainer/MainControl/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_wg1q2")

[node name="EventLabel" type="Label" parent="PrimeContainer/MainControl/VBoxContainer"]
layout_mode = 2
text = "Events"

[node name="Container" type="Container" parent="PrimeContainer/MainControl/VBoxContainer"]
layout_mode = 2

[node name="EventList" type="Label" parent="PrimeContainer/MainControl/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "This is a placeholder text"
autowrap_mode = 3
script = ExtResource("6_nkdjw")

[node name="SideControl" type="PanelContainer" parent="PrimeContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_4mt8n")

[node name="VBoxContainer" type="VBoxContainer" parent="PrimeContainer/SideControl"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PrimeContainer/SideControl/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ActionGroups" type="GridContainer" parent="PrimeContainer/SideControl/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
theme_override_constants/h_separation = 15
columns = 3

[node name="Career" type="Button" parent="PrimeContainer/SideControl/VBoxContainer/MarginContainer/ActionGroups"]
layout_mode = 2
text = "Career Profile"

[node name="Skills" type="Button" parent="PrimeContainer/SideControl/VBoxContainer/MarginContainer/ActionGroups"]
layout_mode = 2
text = "Skills
"

[node name="FindJob" parent="PrimeContainer/SideControl" instance=ExtResource("11_uviox")]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="CareerPanel" parent="PrimeContainer/SideControl" instance=ExtResource("13_f3rn0")]
visible = false
layout_mode = 2
script = ExtResource("14_1k23j")

[connection signal="button_down" from="PrimeContainer/MainControl/VBoxContainer/ButtonControl/Button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="PrimeContainer/SideControl/VBoxContainer/MarginContainer/ActionGroups/Career" to="PrimeContainer/SideControl/CareerPanel" method="_on_career_pressed"]
